[package]
name = "neuro-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.4" }
hyper = { version = "1.1.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
oauth2 = { version = "4.4.2" }
reqwest = "0.11.24"
dotenvy = "0.15"
openidconnect = "3.4.0"
tower-http = { version = "0.5.1", features = ["cors"] }
serde_json = "1.0.113"
once_cell = "1.19.0"
