[package]
name = "neuro-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.4"
tower = "0.4.13"
hyper = { version = "1.1.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0"
env_logger = "0.11.1"
log = "0.4"
once_cell = "1.19.0"
dotenvy = "0.15.7"
envconfig = "0.10.0"
oauth2 = "4.4.2"
openidconnect = "3.4.0"
tower-http = { version = "0.5.1", features = ["cors"] }
