[package]
name = "neuro-rs"
version = "0.1.1"
edition = "2021"


[dependencies]
axum = "0.7.5"
tower = "0.4.13"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.0.3", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.122"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
dotenvy = "0.15.7"
envconfig = "0.10.0"
oauth2 = "4.4.2"
openidconnect = "3.5.0"
tower-http = { version = "0.5.2", features = ["cors"] }
